--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-    "presets": ["@bable/preset-react", "@bable/preset-env"],
+    "presets": ["@babel/preset-react", "@babel/preset-env"],
     "plugins": ["@babel/plugin-proposal-class-properties"]
 }
