--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "complete-intro-to-react-v5",
   "version": "1.0.0",
-  "description": "",
+  "description": "To learn new things in react",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
