--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "format": "prettier \"src/**/*.{js,html}\" --write",
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
     "dev": "parcel src/index.html",
-    "dev:mock": "cross-env PET_MOCK=mock npm run dev"
+    "dev:mock": "cross-env PET_MOCK=mock npm run dev",
+    "clear-build-cache": "rm -rf .cache/ dist/"
   },
   "repository": {
     "type": "git",
