--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
     "dev": "parcel src/index.html",
     "dev:mock": "cross-env PET_MOCK=mock npm run dev",
-    "clear-build-cache": "rm -rf .cache/ dist/"
+    "clear-build-cache": "rm -rf .cache/ dist/",
+    "build": "parcel build --public-url .dist/ src/index.html",
+    "start": "npm run build && babel-node server/index.js"
   },
   "repository": {
     "type": "git",
@@ -43,6 +45,8 @@
     "@emotion/core": "^10.0.28",
     "@frontendmasters/pet": "^1.0.3",
     "@reach/router": "^1.3.3",
+    "babel-cli": "^6.26.0",
+    "express": "^4.17.1",
     "moment": "^2.24.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
