--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "parcel src/index.html",
     "dev:mock": "cross-env PET_MOCK=mock npm run dev",
     "clear-build-cache": "rm -rf .cache/ dist/",
-    "build": "parcel build --public-url .dist/ src/index.html",
+    "build": "parcel build --public-url ./dist/ src/index.html",
     "start": "npm run build && babel-node server/index.js"
   },
   "repository": {
@@ -25,10 +25,11 @@
   },
   "homepage": "https://github.com/gunaerode/intro-to-react-v5#readme",
   "devDependencies": {
-    "@babel/core": "^7.8.7",
+    "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.8.3",
+    "@emotion/babel-preset-css-prop": "^10.0.27",
     "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
@@ -42,7 +43,6 @@
   },
   "dependencies": {
     "@babel/node": "^7.8.7",
-    "@emotion/babel-preset-css-prop": "^10.0.27",
     "@emotion/core": "^10.0.28",
     "@frontendmasters/pet": "^1.0.3",
     "@reach/router": "^1.3.3",
