--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "To learn new things in react",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:update": "jest -u",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "format": "prettier \"src/**/*.{js,html}\" --write",
     "lint": "eslint \"src/**/*.{js,jsx}\" --quiet",
     "dev": "parcel src/index.html",
@@ -35,12 +38,14 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
+    "jest": "^25.2.3",
     "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1"
   },
   "dependencies": {
     "@frontendmasters/pet": "^1.0.3",
     "@reach/router": "^1.3.3",
+    "@testing-library/react": "^10.0.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
   },
